# Stereo_Camera

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Requisito1  Requisito1.cpp  Requisito2.cpp  Requisito2_calibracao.cpp  cmake_install.cmake  common.cpp  common.h  parameters.xml
